[gd_scene load_steps=10 format=3 uid="uid://eftg82t6r7cq"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_dgfhh"]
[ext_resource type="PackedScene" uid="uid://c2lw0a4dhnnig" path="res://scene/player.tscn" id="2_6nceo"]
[ext_resource type="Script" path="res://scripts/manager/ladderManager.gd" id="2_dghg1"]
[ext_resource type="PackedScene" uid="uid://tc38h7aqwbdu" path="res://scene/ui/cardContainer.tscn" id="3_gs4t1"]
[ext_resource type="Texture2D" uid="uid://cg2ebflgk2jvr" path="res://asset/bg.png" id="3_s3jx8"]
[ext_resource type="AudioStream" uid="uid://dog7m08m8qgou" path="res://sound/dice.mp3" id="5_0lt8s"]
[ext_resource type="AudioStream" uid="uid://dyhucd5628a2t" path="res://sound/bgm4.mp3" id="6_l07k5"]

[sub_resource type="Curve2D" id="Curve2D_0jt7g"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 112, 367, 0, 0, 0, 0, 168, 438, 0, 0, 0, 0, 313, 472, 0, 0, 0, 0, 796, 470, 0, 0, 0, 0, 985, 405, 0, 0, 0, 0, 1114, 341, 0, 0, 0, 0, 1124, 114, 0, 0, 0, 0, 971, 119, 0, 0, 0, 0, 832, 123, 0, 0, 0, 0, 675, 352, 0, 0, 0, 0, 536, 356, 0, 0, 0, 0, 365, 350, 0, 0, 0, 0, 318, 232, 0, 0, 0, 0, 138, 208, 0, 0, 0, 0, 137, 83, 0, 0, 0, 0, 533, 86)
}
point_count = 16

[sub_resource type="TileSet" id="TileSet_uhmgl"]
tile_size = Vector2i(50, 50)

[node name="main" type="Node2D"]
script = ExtResource("1_dgfhh")
playerScene = ExtResource("2_6nceo")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(575.5, 320.5)
scale = Vector2(1.01128, 1.01698)
texture = ExtResource("3_s3jx8")

[node name="cardContainer" parent="." instance=ExtResource("3_gs4t1")]

[node name="pathLadder" type="Path2D" parent="."]
position = Vector2(-11, -20)
curve = SubResource("Curve2D_0jt7g")
script = ExtResource("2_dghg1")

[node name="grid" type="TileMap" parent="pathLadder"]
tile_set = SubResource("TileSet_uhmgl")
format = 2

[node name="pathStep" type="PathFollow2D" parent="pathLadder"]
position = Vector2(112, 367)
rotation = 0.902964
loop = false

[node name="ui" type="CanvasLayer" parent="."]

[node name="roll" type="Button" parent="ui"]
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.602
anchor_right = 0.092
anchor_bottom = 0.69
offset_left = 11.984
offset_top = 10.904
offset_right = -18.984
offset_bottom = -15.12
disabled = true
text = "Roll"

[node name="point" type="Label" parent="ui"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.089
anchor_bottom = 0.596
offset_left = 45.0
offset_top = 19.0
offset_right = -17.528
offset_bottom = -17.208
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0
"

[node name="players" type="Node2D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="players"]
_spawnable_scenes = PackedStringArray("res://scene/player.tscn")
spawn_path = NodePath("..")

[node name="trunTimeout" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="dice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0lt8s")

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_l07k5")
bus = &"New Bus"

[connection signal="pressed" from="ui/roll" to="." method="_on_roll_pressed"]
[connection signal="timeout" from="trunTimeout" to="." method="_on_trun_timeout_timeout"]
